--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "strapi-plugin-react-editorjs",
+  "name": "kooko-strapi-plugin-react-editorjs",
+  "private": true,
   "version": "0.0.0-development",
   "description": "Plugin for Strapi Headless CMS, hiding the standard WYSIWYG editor and replacing it with Editor.js",
   "homepage": "https://market.strapi.io/plugins/strapi-plugin-react-editorjs",
