--- a/package.json
+++ b/package.json
@@ -13,33 +13,37 @@
     "kind": "plugin"
   },
   "dependencies": {
-    "@editorjs/checklist": "1.3.0",
-    "@editorjs/code": "2.7.0",
-    "@editorjs/delimiter": "1.2.0",
-    "@editorjs/editorjs": "2.23.2",
-    "@editorjs/embed": "2.5.0",
-    "@editorjs/header": "2.6.2",
-    "@editorjs/image": "2.6.2",
-    "@editorjs/inline-code": "1.3.1",
-    "@editorjs/link": "2.4.0",
-    "@editorjs/list": "1.6.2",
-    "@editorjs/marker": "1.2.2",
-    "@editorjs/paragraph": "2.8.0",
-    "@editorjs/quote": "2.4.0",
-    "@editorjs/raw": "2.3.0",
-    "@editorjs/table": "2.0.1",
-    "@editorjs/warning": "1.2.0",
+    "@calumk/editorjs-columns": "^0.2.4",
+    "@editorjs/attaches": "^1.3.0",
+    "@editorjs/checklist": "1.5.0",
+    "@editorjs/code": "2.8.0",
+    "@editorjs/delimiter": "1.3.0",
+    "@editorjs/editorjs": "2.26.5",
+    "@editorjs/embed": "2.5.3",
+    "@editorjs/header": "2.7.0",
+    "@editorjs/image": "2.8.1",
+    "@editorjs/inline-code": "1.4.0",
+    "@editorjs/link": "2.5.0",
+    "@editorjs/list": "1.8.0",
+    "@editorjs/marker": "1.3.0",
+    "@editorjs/paragraph": "2.9.0",
+    "@editorjs/quote": "2.5.0",
+    "@editorjs/raw": "2.4.0",
+    "@editorjs/table": "2.2.1",
     "classnames": "^2.3.1",
-    "editorjs-text-color-plugin": "^1.13.1",
+    "editorjs-alert": "^1.1.3",
+    "editorjs-carousel": "^1.0.7",
+    "editorjs-text-color-plugin": "^2.0.2",
+    "editorjs-toggle-block": "^0.3.11",
     "get-file-object-from-local-path": "1.0.2",
-    "open-graph-scraper": "4.9.2",
+    "open-graph-scraper": "4.11.1",
     "react-editor-js": "1.10.0"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "cz-conventional-changelog": "^3.3.0",
-    "semantic-release": "^19.0.2"
+    "semantic-release": "^19.0.5"
   },
   "config": {
     "commitizen": {
