--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kooko-strapi-plugin-react-editorjs",
   "private": true,
-  "version": "0.0.0-development",
+  "version": "0.0.2",
   "description": "Plugin for Strapi Headless CMS, hiding the standard WYSIWYG editor and replacing it with Editor.js",
   "homepage": "https://market.strapi.io/plugins/strapi-plugin-react-editorjs",
   "strapi": {
@@ -13,27 +13,24 @@
     "kind": "plugin"
   },
   "dependencies": {
-    "@calumk/editorjs-columns": "^0.2.4",
-    "@editorjs/attaches": "^1.3.0",
-    "@editorjs/checklist": "1.5.0",
-    "@editorjs/code": "2.8.0",
-    "@editorjs/delimiter": "1.3.0",
-    "@editorjs/editorjs": "2.26.5",
-    "@editorjs/embed": "2.5.3",
-    "@editorjs/header": "2.7.0",
-    "@editorjs/image": "2.8.1",
-    "@editorjs/inline-code": "1.4.0",
-    "@editorjs/link": "2.5.0",
-    "@editorjs/list": "1.8.0",
-    "@editorjs/marker": "1.3.0",
-    "@editorjs/paragraph": "2.9.0",
-    "@editorjs/quote": "2.5.0",
-    "@editorjs/raw": "2.4.0",
-    "@editorjs/table": "2.2.1",
+    "@editorjs/checklist": "1.3.0",
+    "@editorjs/code": "2.7.0",
+    "@editorjs/delimiter": "1.2.0",
+    "@editorjs/editorjs": "2.23.2",
+    "@editorjs/embed": "2.5.0",
+    "@editorjs/header": "2.6.2",
+    "@editorjs/image": "2.6.2",
+    "@editorjs/inline-code": "1.3.1",
+    "@editorjs/link": "2.4.0",
+    "@editorjs/list": "1.6.2",
+    "@editorjs/marker": "1.2.2",
+    "@editorjs/paragraph": "2.8.0",
+    "@editorjs/quote": "2.4.0",
+    "@editorjs/raw": "2.3.0",
+    "@editorjs/table": "2.0.1",
     "classnames": "^2.3.1",
     "editorjs-alert": "^1.1.3",
-    "editorjs-carousel": "^1.0.7",
-    "editorjs-text-color-plugin": "^2.0.2",
+    "editorjs-text-color-plugin": "^1.13.1",
     "editorjs-toggle-block": "^0.3.11",
     "get-file-object-from-local-path": "1.0.2",
     "open-graph-scraper": "4.11.1",
